<resources>
    <string name="app_name">CALCULADORA AJX</string>
    <string name="ac">AC</string>
    <string name="RaizCuadrada">√</string>
    <string name="Potencia">X^</string>
    <string name="Dividir">÷</string>
    <string name="numSiete">7</string>
    <string name="numOcho">8</string>
    <string name="numNueve">9</string>
    <string name="Multiplicar">X</string>
    <string name="numCuatro">4</string>
    <string name="numCinco">5</string>
    <string name="numSeis">6</string>
    <string name="Restar">-</string>
    <string name="numUno">1</string>
    <string name="numDos">2</string>
    <string name="numTres">3</string>
    <string name="Sumar">+</string>
    <string name="numZero">0</string>
    <string name="Coma">,</string>
    <string name="Igual">=</string>
    <string name="MinusPlus">-/+</string>

    <string name="settings_name">OPCIONES</string>
    <string name="exit_name">SALIR</string>
    <string name="title_activity_settings">Opciones</string>
    <string name="opcionOperaciones">Habilitar/deshabilitar operaciones de cálculo</string>

    <string name="acercade">Acerca de..</string>

    <!--colores para las teclas de operandos-->
    <string-array name="color_TeclasOperandos">
        <item name="Defecto">Por defecto</item>
        <item name="Rojo">Rojo</item>
        <item name="Morado">Morado</item>
        <item name="Azul oscuro">Azul oscuro</item>
        <item name="Azul claro">Azul claro</item>
        <item name="Verde oscuro">Verde oscuro</item>
        <item name="Amarillo">Amarillo</item>
    </string-array>

    <!--colores para las teclas de las operaciones-->
    <string-array name="color_TeclasOperaciones">
        <item name="Defecto">Por defecto</item>
        <item name="Rosa">Rosa</item>
        <item name="Marron">Marron</item>
        <item name="Naranja">Naranja</item>
        <item name="Verde claro">Verde claro</item>
        <item name="Azul turquesa">Azul turquesa</item>
        <item name="Lila">Lila</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="textview_teclas_operandos">Seleccione el color para las teclas de los operandos:</string>
    <string name="textview_teclas_operaciones">Seleccione el color para las teclas de las operaciones</string>
    <string name="btnConfirmarConfig">Confirmar configuracion</string>
    <string name="checkBoxRestar">Restar</string>
    <string name="CheckBoxSumar">Sumar</string>
    <string name="checkBoxRaizCuadrada">Raiz cuadrada</string>
    <string name="checkBoxPotencia">Potencia</string>
    <string name="checkBoxMultiplicar">Multiplicar</string>
    <string name="checkBoxDividir">Dividir</string>
    <string name="realizado_por">Realizado por:</string>
    <string name="ander_gallego_julen_fernandez_xabier_de_felipe">Ander Gallego, Julen Fernandez, Xabier de Felipe</string>

</resources>