<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >



    <include
        layout="@layout/action_bar"
        android:id="@id/action_bar">
    </include>

    <CheckBox
        android:id="@+id/checkBoxSumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/action_bar"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/CheckBoxSumar"
        />
    <CheckBox
        android:id="@+id/checkBoxRestar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBoxSumar"
        android:layout_alignLeft="@+id/checkBoxSumar"
        android:text="@string/checkBoxRestar"/>

    <CheckBox
        android:id="@+id/checkBoxRaizCuadrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkBoxSumar"
        android:layout_alignBaseline="@id/checkBoxSumar"
        android:layout_marginLeft="15dp"
        android:text="@string/checkBoxRaizCuadrada"/>

    <CheckBox
        android:id="@+id/checkBoxPotencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkBoxRaizCuadrada"
        android:layout_alignBaseline="@id/checkBoxSumar"
        android:layout_marginLeft="15dp"
        android:text="@string/checkBoxPotencia"/>
    <CheckBox
        android:id="@+id/checkBoxMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkBoxSumar"
        android:layout_alignBaseline="@id/checkBoxRestar"
        android:layout_marginLeft="15dp"
        android:text="@string/checkBoxMultiplicar"/>

    <CheckBox
        android:id="@+id/checkBoxDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/checkBoxMultiplicar"
        android:layout_alignBaseline="@id/checkBoxRestar"
        android:layout_marginLeft="38dp"
        android:text="@string/checkBoxDividir"/>

    <TextView
        android:id="@+id/textViewColorTeclasOperandos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBoxRestar"
        android:layout_alignStart="@+id/checkBoxRestar"
        android:layout_below="@+id/checkBoxRestar"
        android:layout_marginTop="17dp"
        android:text="@string/textview_teclas_operandos"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerColorTeclasOperandos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewColorTeclasOperandos"
        android:layout_alignStart="@+id/textViewColorTeclasOperandos"
        android:layout_below="@+id/textViewColorTeclasOperandos" />

    <TextView
        android:id="@+id/textViewColorTeclasOperaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerColorTeclasOperandos"
        android:layout_alignStart="@+id/spinnerColorTeclasOperandos"
        android:layout_below="@+id/spinnerColorTeclasOperandos"
        android:layout_marginTop="26dp"
        android:text="@string/textview_teclas_operaciones"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerColorTeclasOperaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewColorTeclasOperaciones"
        android:layout_alignStart="@+id/textViewColorTeclasOperaciones"
        android:layout_below="@+id/textViewColorTeclasOperaciones"
        android:layout_marginTop="13dp" />

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:onClick="comprobarCheckBox"
        android:text="@string/btnConfirmarConfig"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBoxRaizCuadrada"
        android:layout_alignLeft="@+id/checkBoxSumar"
        android:layout_alignStart="@+id/checkBoxSumar"
        android:layout_marginBottom="14dp"
        android:text="@string/opcionOperaciones"/>

</RelativeLayout>